@@ -1,4 +1,6 @@
 Changes towards version 0.7:
+- Fixed a text entry width problem that was deleting control template 
+  names (Bug #947) - Michael
 - uio cleanups, documentation - SvdB
 - uio path parsing fixes/improvements - SvdB
   - Windows UNC path support (#907)
